--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <!--! завантаження зображення до заголовку сторінки -->
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- <link rel="icon" type="image/svg+xml" href="/airplane2.ico" /> -->
-    <link href="https://img.icons8.com/3d-fluency/94/airplane-1.png" type="image/x-icon" rel="shortcut icon">
+    <!-- <link href="https://img.icons8.com/3d-fluency/94/airplane-1.png" type="image/x-icon" rel="shortcut icon"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>airplane-model-store</title>
   </head>
